# SimpleLogger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LoggerClient.cpp  LoggerServer.cpp  client.cpp  main.cpp  test.cpp
.github/workflows/: Build_check.yml
examples/: Logger_example.cpp
include/: Logger.hpp  ZMQClient.hpp  ZMQServer.hpp
include/DBs/SQLite/: SQLite.hpp
include/custom_types/: Types.hpp
source/: Logger.cpp  ZMQClient.cpp  ZMQServer.cpp
